--- a/src/article.html
+++ b/src/article.html
@@ -9,12 +9,11 @@
 </head>
 
 <body class="d-flex flex-column bg-light">
-    <a class="sr-only" href="#main">Skip to main content</a>
-    <header class="container-fluid d-none d-lg-block my-4 header">
+    <div class="container-fluid d-none d-lg-block my-4 header">
         <div class="container">
             <div class="row no-gutters">
                 <div class="col-8 media">
-                    <img class="align-self-center mr-3 rounded-right logo" src="./img/logo.jpg" alt="University logo">
+                    <img class="align-self-center mr-3 rounded-right logo" src="./img/logo.jpg">
                     <div class="media-body align-self-center">
                         <div class="mb-0 title">Lorem Ipsum
                             <br>Institute of Technology
@@ -22,24 +21,24 @@
                     </div>
                 </div>
                 <div class="col-4">
-                    <div class="btn-toolbar justify-content-end" role="toolbar" aria-label="Change appearance">
-                        <div class="btn-group btn-group-sm" role="group" aria-label="Font size">
-                            <button class="btn btn-dark font-increase-button" id="font-increase-button" aria-label="Increase font size">A+</button>
-                            <button class="btn btn-dark font-decrease-button" id="font-decrease-button" aria-label="Decrease font size">A-</button>
+                    <div class="btn-toolbar justify-content-end">
+                        <div class="btn-group btn-group-sm">
+                            <button class="btn btn-dark font-increase-button" id="font-increase-button">A+</button>
+                            <button class="btn btn-dark font-decrease-button" id="font-decrease-button">A-</button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </header>
+    </div>
 
-    <nav class="container-fluid bg-dark nav">
+    <div class="container-fluid bg-dark nav">
         <div class="container">
             <div class="navbar navbar-dark bg-dark navbar-expand-lg px-0">
                 <div class="navbar-brand d-lg-none">
-                    <img class="rounded-right" src="./img/logo.jpg" width="40" height="40" alt="Unversity logo">
+                    <img class="rounded-right" src="./img/logo.jpg" width="40" height="40">
                 </div>
-                <button class="navbar-toggler" type="button" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="nav-bar-content">
@@ -48,8 +47,8 @@
                             <a class="nav-link" href="/">Homepage</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-faculties" role="button" aria-haspopup="true" aria-expanded="false">Faculties</a>
-                            <ul class="dropdown-menu" aria-labelledby="nav-bar-faculties">
+                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-faculties" role="button">Faculties</a>
+                            <ul class="dropdown-menu">
                                 <li>
                                     <a class="dropdown-item" href="/empty.html?title=Applied+sciences">Applied sciences</a>
                                 </li>
@@ -68,8 +67,8 @@
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-education" role="button" aria-haspopup="true" aria-expanded="false">Education &amp; research</a>
-                            <ul class="dropdown-menu" aria-labelledby="nav-bar-education">
+                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-education" role="button">Education &amp; research</a>
+                            <ul class="dropdown-menu">
                                 <li>
                                     <a class="dropdown-item" href="/empty.html?title=Bachelor">Bachelor</a>
                                 </li>
@@ -85,8 +84,8 @@
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-industry" role="button" aria-haspopup="true" aria-expanded="false">Industry &amp; partners</a>
-                            <ul class="dropdown-menu" aria-labelledby="nav-bar-industry">
+                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-industry" role="button">Industry &amp; partners</a>
+                            <ul class="dropdown-menu">
                                 <li>
                                     <a class="dropdown-item" href="/empty.html?title=Public+relations">Public relations</a>
                                 </li>
@@ -107,25 +106,22 @@
                 </div>
             </div>
             <div class="d-lg-none">
-                <div class="btn-toolbar justify-content-end" role="toolbar" aria-label="Change appearance">
-                    <div class="btn-group btn-group-sm" role="group" aria-label="Font size">
-                        <button class="btn btn-dark text-white font-increase-button" id="font-increase-button-1" aria-label="Increase font size">A+</button>
-                        <button class="btn btn-dark text-white font-decrease-button" id="font-decrease-button-1" aria-label="Decrease font size">A-</button>
+                <div class="btn-toolbar justify-content-end">
+                    <div class="btn-group btn-group-sm">
+                        <button class="btn btn-dark text-white font-increase-button" id="font-increase-button-1">A+</button>
+                        <button class="btn btn-dark text-white font-decrease-button" id="font-decrease-button-1">A-</button>
                     </div>
                 </div>
             </div>
         </div>
-    </nav>
+    </div>
 
-    <main class="container mt-4 main" id="main">
+    <div class="container mt-4 main" id="main">
         <article class="p-5 bg-white">
             <h1 class="text-primary text-center mb-4">Global temperature record shows 2016 as the warmest year on record</h1>
             <div class="text-center wrapper">
                 <figure class="figure mb-4">
-                    <img src="./img/temperature.jpg" class="figure-img img-fluid" alt="Graphic of global mean temperature change from since 1880.">
-                    <figcaption class="figure-caption text-center px-5">The graphic shows the global mean surface temperature change since 1880 till nowadays. The grey curve
-                        indicates the annual average temperature and the black curve shows the smoothed result. Over the
-                        last two centuries, the mean tempurature has increased by around 1 degree Celcius.</figcaption>
+                    <img src="./img/temperature.jpg" class="figure-img img-fluid">
                 </figure>
             </div>
             <p>The global temperature record shows the fluctuations of the temperature of the atmosphere and the oceans through
@@ -136,23 +132,19 @@
                 The year 2016 ranks as the warmest on record.</p>
             <div class="table-responsive mt-4 wrapper">
                 <table class="table text-center">
-                    <caption class="text-center px-5">Samples of global mean surface temperature change since 1880.
-                        <span class="sr-only">Column one indicates the century. Column two contains the year. Column three shows the annual average
-                            temperature. Column four has the smoothed result.</span>
-                    </caption>
                     <col>
                     <col>
                     <col>
                     <col>
                     <thead class="thead-dark">
                         <tr>
-                            <th class="align-middle" scope="col">Century</th>
-                            <th class="align-middle" scope="col">Year</th>
-                            <th class="align-middle" scope="col">Average
+                            <th class="align-middle">Century</th>
+                            <th class="align-middle">Year</th>
+                            <th class="align-middle">Average
                                 <br>
                                 <small>(Celcius)</small>
                             </th>
-                            <th class="align-middle" scope="col">Smoothed
+                            <th class="align-middle">Smoothed
                                 <br>
                                 <small>(Celcius)</small>
                             </th>
@@ -160,39 +152,39 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <th class="align-middle" rowspan="2" scope="rowgroup">19th century</th>
-                            <th scope="row">1880</th>
+                            <th class="align-middle" rowspan="2" >19th century</th>
+                            <th>1880</th>
                             <td>-0.20</td>
                             <td>-0.13</td>
                         </tr>
                         <tr>
-                            <th scope="row">1890</th>
+                            <th>1890</th>
                             <td>-0.37</td>
                             <td>-0.26</td>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <th class="align-middle" rowspan="2" scope="rowgroup">20th century</th>
-                            <th scope="row">1920</th>
+                            <th class="align-middle" rowspan="2">20th century</th>
+                            <th>1920</th>
                             <td>-0.27</td>
                             <td>-0.26</td>
                         </tr>
                         <tr>
-                            <th scope="row">1990</th>
+                            <th>1990</th>
                             <td>0.44</td>
                             <td>0.34</td>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <th class="align-middle" rowspan="2" scope="rowgroup">21st century</th>
-                            <th scope="row">2000</th>
+                            <th class="align-middle" rowspan="2">21st century</th>
+                            <th>2000</th>
                             <td>0.42</td>
                             <td>0.52</td>
                         </tr>
                         <tr>
-                            <th scope="row">2016</th>
+                            <th>2016</th>
                             <td>0.99</td>
                             <td>0.91</td>
                         </tr>
@@ -200,9 +192,9 @@
                 </table>
             </div>
         </article>
-    </main>
+    </div>
 
-    <footer class="container-fluid bg-dark mt-4 footer">
+    <div class="container-fluid bg-dark mt-4 footer">
         <div class="container text-center py-3">
             <div class="row justify-content-around">
                 <a class="col-12 col-md mr-3 text-white" href="/empty.html?title=About">About</a>
@@ -212,7 +204,7 @@
                 <a class="col-12 col-md mr-3 text-white" href="/empty.html?title=Privacy+policy">Privacy policy</a>
             </div>
         </div>
-    </footer>
+    </div>
 </body>
 
 </html>
