--- a/src/empty.html
+++ b/src/empty.html
@@ -9,12 +9,11 @@
 </head>
 
 <body class="d-flex flex-column bg-light">
-    <a class="sr-only" href="#main">Skip to main content</a>
-    <header class="container-fluid d-none d-lg-block my-4 header">
+    <div class="container-fluid d-none d-lg-block my-4 header">
         <div class="container">
             <div class="row no-gutters">
                 <div class="col-8 media">
-                    <img class="align-self-center mr-3 rounded-right logo" src="./img/logo.jpg" alt="University logo">
+                    <img class="align-self-center mr-3 rounded-right logo" src="./img/logo.jpg">
                     <div class="media-body align-self-center">
                         <div class="mb-0 title">Lorem Ipsum
                             <br>Institute of Technology
@@ -22,24 +21,24 @@
                     </div>
                 </div>
                 <div class="col-4">
-                    <div class="btn-toolbar justify-content-end" role="toolbar" aria-label="Change appearance">
-                        <div class="btn-group btn-group-sm" role="group" aria-label="Font size">
-                            <button class="btn btn-dark font-increase-button" id="font-increase-button" aria-label="Increase font size">A+</button>
-                            <button class="btn btn-dark font-decrease-button" id="font-decrease-button" aria-label="Decrease font size">A-</button>
+                    <div class="btn-toolbar justify-content-end">
+                        <div class="btn-group btn-group-sm">
+                            <button class="btn btn-dark font-increase-button" id="font-increase-button">A+</button>
+                            <button class="btn btn-dark font-decrease-button" id="font-decrease-button">A-</button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </header>
+    </div>
 
-    <nav class="container-fluid bg-dark nav">
+    <div class="container-fluid bg-dark nav">
         <div class="container">
             <div class="navbar navbar-dark bg-dark navbar-expand-lg px-0">
                 <div class="navbar-brand d-lg-none">
-                    <img class="rounded-right" src="./img/logo.jpg" width="40" height="40" alt="Unversity logo">
+                    <img class="rounded-right" src="./img/logo.jpg" width="40" height="40">
                 </div>
-                <button class="navbar-toggler" type="button" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="nav-bar-content">
@@ -48,8 +47,8 @@
                             <a class="nav-link" href="/">Homepage</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-faculties" role="button" aria-haspopup="true" aria-expanded="false">Faculties</a>
-                            <ul class="dropdown-menu" aria-labelledby="nav-bar-faculties">
+                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-faculties" role="button">Faculties</a>
+                            <ul class="dropdown-menu">
                                 <li>
                                     <a class="dropdown-item" href="/empty.html?title=Applied+sciences">Applied sciences</a>
                                 </li>
@@ -68,8 +67,8 @@
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-education" role="button" aria-haspopup="true" aria-expanded="false">Education &amp; research</a>
-                            <ul class="dropdown-menu" aria-labelledby="nav-bar-education">
+                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-education" role="button">Education &amp; research</a>
+                            <ul class="dropdown-menu">
                                 <li>
                                     <a class="dropdown-item" href="/empty.html?title=Bachelor">Bachelor</a>
                                 </li>
@@ -85,8 +84,8 @@
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-industry" role="button" aria-haspopup="true" aria-expanded="false">Industry &amp; partners</a>
-                            <ul class="dropdown-menu" aria-labelledby="nav-bar-industry">
+                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-industry" role="button">Industry &amp; partners</a>
+                            <ul class="dropdown-menu">
                                 <li>
                                     <a class="dropdown-item" href="/empty.html?title=Public+relations">Public relations</a>
                                 </li>
@@ -107,23 +106,23 @@
                 </div>
             </div>
             <div class="d-lg-none">
-                <div class="btn-toolbar justify-content-end" role="toolbar" aria-label="Change appearance">
-                    <div class="btn-group btn-group-sm" role="group" aria-label="Font size">
-                        <button class="btn btn-dark text-white font-increase-button" id="font-increase-button-1" aria-label="Increase font size">A+</button>
-                        <button class="btn btn-dark text-white font-decrease-button" id="font-decrease-button-1" aria-label="Decrease font size">A-</button>
+                <div class="btn-toolbar justify-content-end">
+                    <div class="btn-group btn-group-sm">
+                        <button class="btn btn-dark text-white font-increase-button" id="font-increase-button-1">A+</button>
+                        <button class="btn btn-dark text-white font-decrease-button" id="font-decrease-button-1">A-</button>
                     </div>
                 </div>
             </div>
         </div>
-    </nav>
+    </div>
 
-    <main class="container mt-4 text-center main" id="main">
+    <div class="container mt-4 text-center main" id="main">
         <h1 class="text-primary py-4 mb-4" id="title-placeholder">Loading...</h1>
         <p class="text-secondary" id="text-placeholder"></p>
-    </main>
+    </div>
 
 
-    <footer class="container-fluid bg-dark mt-4 footer">
+    <div class="container-fluid bg-dark mt-4 footer">
         <div class="container text-center py-3">
             <div class="row justify-content-around">
                 <a class="col-12 col-md mr-3 text-white" href="/empty.html?title=About">About</a>
@@ -133,7 +132,7 @@
                 <a class="col-12 col-md mr-3 text-white" href="/empty.html?title=Privacy+policy">Privacy policy</a>
             </div>
         </div>
-    </footer>
+    </div>
 </body>
 
 </html>
