Removed more accessibility features

--- a/src/article.html
+++ b/src/article.html
@@ -117,12 +117,13 @@
     </div>
 
     <div class="container mt-4 main" id="main">
-        <article class="p-5 bg-white">
-            <h1 class="text-primary text-center mb-4">Global temperature record shows 2016 as the warmest year on record</h1>
+        <div class="p-5 bg-white">
+            <div class="text-primary text-center mb-4 title">Global temperature record shows 2016 as the warmest year on record</div>
             <div class="text-center wrapper">
-                <figure class="figure mb-4">
-                    <img src="./img/temperature.jpg" class="figure-img img-fluid">
-                </figure>
+                <img src=/img/temperature.jpg class="figure-img img-fluid">
+                <p class="figure-caption text-center px-5">The graphic shows the global mean surface temperature change since 1880 till nowadays. The grey curve indicates
+                    the annual average temperature and the black curve shows the smoothed result. Over the last two centuries,
+                    the mean tempurature has increased by around 1 degree Celcius.</p>
             </div>
             <p>The global temperature record shows the fluctuations of the temperature of the atmosphere and the oceans through
                 various spans of time. The recently data published by NASA is one of the most detailed information exists
@@ -136,62 +137,62 @@
                     <col>
                     <col>
                     <col>
-                    <thead class="thead-dark">
+                    <tbody class="thead-dark">
                         <tr>
-                            <th class="align-middle">Century</th>
-                            <th class="align-middle">Year</th>
-                            <th class="align-middle">Average
+                            <td class="align-middle">Century</td>
+                            <td class="align-middle">Year</td>
+                            <td class="align-middle">Average
                                 <br>
                                 <small>(Celcius)</small>
-                            </th>
-                            <th class="align-middle">Smoothed
+                            </td>
+                            <td class="align-middle">Smoothed
                                 <br>
                                 <small>(Celcius)</small>
-                            </th>
+                            </td>
                         </tr>
-                    </thead>
+                    </tbody>
                     <tbody>
                         <tr>
-                            <th class="align-middle" rowspan="2" >19th century</th>
-                            <th>1880</th>
+                            <td class="align-middle" rowspan="2">19th century</td>
+                            <td>1880</td>
                             <td>-0.20</td>
                             <td>-0.13</td>
                         </tr>
                         <tr>
-                            <th>1890</th>
+                            <td>1890</td>
                             <td>-0.37</td>
                             <td>-0.26</td>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <th class="align-middle" rowspan="2">20th century</th>
-                            <th>1920</th>
+                            <td class="align-middle" rowspan="2">20th century</td>
+                            <td>1920</td>
                             <td>-0.27</td>
                             <td>-0.26</td>
                         </tr>
                         <tr>
-                            <th>1990</th>
+                            <td>1990</td>
                             <td>0.44</td>
                             <td>0.34</td>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <th class="align-middle" rowspan="2">21st century</th>
-                            <th>2000</th>
+                            <td class="align-middle" rowspan="2">21st century</td>
+                            <td>2000</td>
                             <td>0.42</td>
                             <td>0.52</td>
                         </tr>
                         <tr>
-                            <th>2016</th>
+                            <td>2016</td>
                             <td>0.99</td>
                             <td>0.91</td>
                         </tr>
                     </tbody>
                 </table>
             </div>
-        </article>
+        </div>
     </div>
 
     <div class="container-fluid bg-dark mt-4 footer">
