--- a/src/index.html
+++ b/src/index.html
@@ -117,19 +117,16 @@
     </div>
 
     <div class="container main" id="main">
-        <div class="sr-only">
-            <h1>Welcome to Lorem Ipsum Institute of Technolgoy</h1>
-        </div>
         <div class="row no-gutters">
             <div class="col-12 col-lg-6">
                 <div class="p-4 mt-4 mr-lg-3 bg-white news">
-                    <h2 class="text-primary mb-4">News &amp; events</h2>
+                    <div class="text-primary mb-4 title">News &amp; events</div>
                     <div class="media mt-4">
                         <img class="my-1 mr-2 rounded-right" src="./img/iceberg.jpg">
                         <div class="media-body">
-                            <h3 class="text-info mt-0 mb-2">
+                            <div class="text-info mt-0 mb-2 subtitle">
                                 <a href="/article.html">Global temperature record</a>
-                            </h3>
+                            </div>
                             <p>
                                 The global surface temperature relative to 1951-1980 average recently published by NASA shows that 2016 ranks as the warmest
                                 year on record.
@@ -142,9 +139,9 @@
                     <div class="media mt-4">
                         <img class="my-1 mr-2 rounded-right" src="./img/universe.jpg">
                         <div class="media-body">
-                            <h3 class="text-info mt-0 mb-2">
+                            <div class="text-info mt-0 mb-2 subtitle">
                                 <a href="/empty.html?title=Article">At iam decimum annum in spelunca iacet</a>
-                            </h3>
+                            </div>
                             <p>
                                 Immo vero, inquit, ad beatissime vivendum parum est, ad beate vero satis. Claudii libidini, qui tum erat summo ne imperio,
                                 dederetur. Ergo id est convenienter naturae vivere, a natura discedere.
@@ -157,9 +154,9 @@
                     <div class="media mt-4">
                         <img class="my-1 mr-2 rounded-right" src="./img/robots.jpg">
                         <div class="media-body">
-                            <h3 class="text-info mt-0 mb-2">
+                            <div class="text-info mt-0 mb-2 subtitle">
                                 <a href="/empty.html?title=Article">Quo plebiscito decreta a senatu est consuli quaestio Cn</a>
-                            </h3>
+                            </div>
                             <p>
                                 Comprehensum, quod cognitum non habet? Quia nec honesto quic quam honestius nec turpi turpius. Maximeque eos videre possumus
                                 res gestas audire et legere velle, qui a spe gerendi absunt confecti senectute. Est enim
@@ -174,7 +171,7 @@
             </div>
             <div class="col-12 col-lg-6">
                 <div class="p-4 mt-4 bg-white studies">
-                    <h2 class="text-primary mb-4">Studies</h2>
+                    <div class="text-primary mb-4 title">Studies</div>
                     <p class="font-weight-bold">Advance your scientific education</p>
                     <ul class="list-unstyled ml-3">
                         <li>
@@ -190,7 +187,7 @@
                 </div>
 
                 <div class="p-4 mt-4 bg-white researches">
-                    <h2 class="text-primary mb-4">Researches</h2>
+                    <div class="text-primary mb-4 title">Researches</div>
                     <p class="font-weight-bold">Join our renowned research groups</p>
                     <p class="ml-3">
                         <a href="/empty.html?title=Doctorate">Doctoral programmes</a>
