--- a/src/login.html
+++ b/src/login.html
@@ -120,16 +120,17 @@
         <div class="row no-gutters">
             <div class="col-12 col-md-5 mt-4 login">
                 <div class="p-4 mr-md-3 bg-white">
-                    <h1 class="text-primary mb-4">Login</h1>
-                    <h2 class="text-danger mb-4 d-none" id="login-error">Please correct the error(s)</h2>
+                    <div class="text-primary mb-4 title">Login</div>
+                    <div class="text-danger mb-4 d-none subtitle" id="login-error">Please correct the error(s)</div>
+                    <ul class="sr-only" id="login-error-list"></ul>
                     <form id="login-form" novalidate>
                         <div class="form-group">
-                            <label>Email</label>
-                            <input class="form-control" id="login-email-control" type="email" placeholder="Email" required aria-required="true">
+                            <p>Email</p>
+                            <input class="form-control" id="login-email-control" type="email" placeholder="Email" required>
                             <small class="invalid-feedback"></small>
                         </div>
                         <div class="form-group">
-                            <label>Password</label>
+                            <p>Password</p>
                             <input class="form-control" id="login-password-control" type="password" placeholder="Password">
                             <small class="invalid-feedback"></small>
                         </div>
@@ -145,40 +146,41 @@
                 </div>
             </div>
 
-            <section class="col-12 col-md-7 mt-4 register">
+            <div class="col-12 col-md-7 mt-4 register">
                 <div class="p-4 bg-white">
-                    <h1 class="text-primary mb-4">Create new account</h1>
-                    <h2 class="text-danger mb-4 d-none" id="register-error">Please correct the error(s)</h2>
+                    <div class="text-primary mb-4 title">Create new account</div>
+                    <div class="text-danger mb-4 d-none subtitle" id="register-error">Please correct the error(s)</div>
+                    <ul class="sr-only" id="register-error-list"></ul>
                     <form id="register-form" novalidate>
-                        <fieldset class="form-group">
-                            <legend class="form-label" id="register-basic-legend">Basic information
+                        <div class="form-group">
+                            <p class="form-label" id="register-basic-legend">Basic information
                                 <small class="text-secondary">(optional)</small>
-                            </legend>
+                            </p>
                             <div class="form-row">
                                 <div class="form-group col-12 col-lg-6">
-                                    <label>First name</label>
+                                    <p>First name</p>
                                     <input class="form-control" type="text" id="register-first-name-control" placeholder="First name" required>
                                     <small class="invalid-feedback"></small>
                                 </div>
                                 <div class="form-group col-12 col-lg-6">
-                                    <label>Last name</label>
+                                    <p>Last name</p>
                                     <input class="form-control" type="text" id="register-last-name-control" placeholder="Last name" required>
                                     <small class="invalid-feedback"></small>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label>Email</label>
+                                <p>Email</p>
                                 <input class="form-control" id="register-email-control" type="email" placeholder="Email" required>
                                 <small class="invalid-feedback"></small>
                             </div>
                             <div class="form-group">
-                                <label>Password</label>
+                                <p>Password</p>
                                 <input class="form-control" id="register-password-control" type="password" placeholder="Password" required>
                                 <small class="invalid-feedback"></small>
                                 <small id="register-password-help" class="form-text text-muted">Your password must be 8-16 characters long and contain both letters and numbers.</small>
                             </div>
                             <div class="form-group">
-                                <label>Programme</label>
+                                <p>Programme</p>
                                 <select class="form-control" id="register-programme-control" required>
                                     <option value="">Please select your education or research programme</option>
                                     <option value="bachelor">Bachelor</option>
@@ -188,34 +190,34 @@
                                 </select>
                                 <small class="invalid-feedback"></small>
                             </div>
-                        </fieldset>
-                        <fieldset class="form-group">
-                            <legend class="form-label" id="register-address-legend">Additional information
+                        </div>
+                        <div class="form-group">
+                            <p class="form-label" id="register-address-legend">Additional information
                                 <small class="text-secondary">(optional)</small>
-                            </legend>
+                            </p>
                             <div class="form-group">
-                                <label>Street</label>
+                                <p>Street</p>
                                 <input class="form-control" id="register-street-control" type="text" placeholder="Street">
                             </div>
                             <div class="form-row">
                                 <div class="form-group col-12 col-lg-5">
-                                    <label>City</label>
+                                    <p>City</p>
                                     <input class="form-control" id="register-city-control" type="text" placeholder="City">
                                 </div>
                                 <div class="form-group col-12 col-lg-4">
-                                    <label>State</label>
+                                    <p>State</p>
                                     <input class="form-control" id="register-state-control" type="text" placeholder="State">
                                 </div>
                                 <div class="form-group col-12 col-lg-3">
-                                    <label>Zip</label>
+                                    <p>Zip</p>
                                     <input class="form-control" id="register-zip-control" type="text" placeholder="Zip">
                                 </div>
                             </div>
-                        </fieldset>
+                        </div>
                         <button class="btn btn-primary" id="register-register-button">Register</button>
                     </form>
                 </div>
-            </section>
+            </div>
         </div>
     </div>
 
