--- a/src/index.html
+++ b/src/index.html
@@ -128,10 +128,10 @@
             <div class="col-12 col-lg-6">
                 <section class="p-4 mt-4 mr-lg-3 bg-white news">
                     <h2 class="text-primary mb-4">News &amp; events</h2>
-                    <article class="media mt-4">
+                    <article class="media mt-4" aria-labelledby="article-1">
                         <img class="my-1 mr-2 rounded-right" src="./img/iceberg.jpg" alt="Photo of an iceberg">
                         <div class="media-body">
-                            <h3 class="text-info mt-0 mb-2">
+                            <h3 class="text-info mt-0 mb-2" id="article-1">
                                 <a href="/article.html">Global temperature record</a>
                             </h3>
                             <p>
@@ -143,10 +143,10 @@
                             </div>
                         </div>
                     </article>
-                    <article class="media mt-4">
+                    <article class="media mt-4" aria-labelledby="article-2">
                         <img class="my-1 mr-2 rounded-right" src="./img/universe.jpg" alt="Photo of a galaxy">
                         <div class="media-body">
-                            <h3 class="text-info mt-0 mb-2">
+                            <h3 class="text-info mt-0 mb-2" id="article-2">
                                 <a href="/empty.html?title=Article">At iam decimum annum in spelunca iacet</a>
                             </h3>
                             <p>
@@ -158,10 +158,10 @@
                             </div>
                         </div>
                     </article>
-                    <article class="media mt-4">
+                    <article class="media mt-4" aria-labelledby="article-3">
                         <img class="my-1 mr-2 rounded-right" src="./img/robots.jpg" alt="Photo of a robot">
                         <div class="media-body">
-                            <h3 class="text-info mt-0 mb-2">
+                            <h3 class="text-info mt-0 mb-2" id="article-3">
                                 <a href="/empty.html?title=Article">Quo plebiscito decreta a senatu est consuli quaestio Cn</a>
                             </h3>
                             <p>
