- Added aria-labelled by to article - Removed extra table headings

--- a/src/article.html
+++ b/src/article.html
@@ -118,8 +118,8 @@
     </nav>
 
     <main class="container mt-4 main" id="main">
-        <article class="p-5 bg-white">
-            <h1 class="text-primary text-center mb-4">Global temperature record shows 2016 as the warmest year on record</h1>
+        <article class="p-5 bg-white" aria-labelledby="article">
+            <h1 class="text-primary text-center mb-4" id="article">Global temperature record shows 2016 as the warmest year on record</h1>
             <div class="text-center wrapper">
                 <figure class="figure mb-4">
                     <img src="./img/temperature.jpg" class="figure-img img-fluid" alt="Graphic of global mean temperature change from since 1880.">
@@ -161,12 +161,12 @@
                     <tbody>
                         <tr>
                             <th class="align-middle" rowspan="2" scope="rowgroup">19th century</th>
-                            <th scope="row">1880</th>
+                            <td>1880</td>
                             <td>-0.20</td>
                             <td>-0.13</td>
                         </tr>
                         <tr>
-                            <th scope="row">1890</th>
+                            <td>1890</td>
                             <td>-0.37</td>
                             <td>-0.26</td>
                         </tr>
@@ -174,12 +174,12 @@
                     <tbody>
                         <tr>
                             <th class="align-middle" rowspan="2" scope="rowgroup">20th century</th>
-                            <th scope="row">1920</th>
+                            <td>1920</td>
                             <td>-0.27</td>
                             <td>-0.26</td>
                         </tr>
                         <tr>
-                            <th scope="row">1990</th>
+                            <td>1990</td>
                             <td>0.44</td>
                             <td>0.34</td>
                         </tr>
@@ -187,12 +187,12 @@
                     <tbody>
                         <tr>
                             <th class="align-middle" rowspan="2" scope="rowgroup">21st century</th>
-                            <th scope="row">2000</th>
+                            <td>2000</td>
                             <td>0.42</td>
                             <td>0.52</td>
                         </tr>
                         <tr>
-                            <th scope="row">2016</th>
+                            <td>2016</td>
                             <td>0.99</td>
                             <td>0.91</td>
                         </tr>
